apps/prowlarr/components/tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: prowlarr
          ports:
            - containerPort: 6969
              name: https
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: prowlarr-tls
