apps/prowlarr/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
    - name: https
      port: 6969
      targetPort: https
