apps/prowlarr/components/tls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 6969
      targetPort: https
