apps/prowlarr/components/tls/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: prowlarr
      port:
        name: https
